--- a/main.html
+++ b/main.html
@@ -17,12 +17,12 @@
                 <span class="intro__button-text">Get started</span>
             </button>
         </section>
-        <section class="second-block">
-            <div class="second-block__image-container second-block__image-container--1">
-                <img src="images/img2.jfif" class="second-block__image">
+        <section class="images-left">
+            <div class="images-left__image-container images-left__image-container--1">
+                <img src="images/img2.jfif" class="images-left__image">
             </div>
-            <div class="second-block__image-container second-block__image-container--2">
-                <img src="images/img1.jfif" class="second-block__image">
+            <div class="images-left__image-container images-left__image-container--2">
+                <img src="images/img1.jfif" class="images-left__image">
             </div>
         </section>
         <section class="star">
@@ -33,29 +33,29 @@
             <img src="images/Star 4.png">
             
         </section>
-        <section class="third-block">
-            <div class="third-block__image-container third-block__image-container--1">
-                <img src="images/img3.jfif" class="third-block__image">
+        <section class="images-right">
+            <div class="images-right__image-container images-right__image-container--1">
+                <img src="images/img3.jfif" class="images-right__image">
             </div>
-            <div class="third-block__image-container third-block__image-container--2">
-                <img src="images/img4.jfif" class="third-block__image">
+            <div class="images-right__image-container images-right__image-container--2">
+                <img src="images/img4.jfif" class="images-right__image">
             </div>
         </section>
-        <section class="content-block">
-            <div class="content-text">
+        <section class="text-right">
+            <div class="content-text-right-first">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Faucibus in libero risus semper habitant arcu eget. 
                     Et integer facilisi </p>
             </div>
-            <div class="content-typography">
+            <div class="content-text-right-second">
                 <p>Trave<br>Explore<br>Discover</p>
             </div>
         </section>
 
-        <section class="rotaited-block">
-            <div class="picture-1">
+        <section class="rotaited-symbols-block">
+            <div class="picture-first">
                 <img src="images/Group.svg">
             </div>
-            <div class="picture-2">
+            <div class="picture-second">
                 <img src="images/Frame 14216.svg">
             </div>
         </section>
