--- a/main.html
+++ b/main.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Plant.Tree.Nature</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/left-blocks.css">
+    <link rel="stylesheet" href="css/middle-blocks.css">
+    <link rel="stylesheet" href="css/right-blocks.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="page">
     <div class="page__container">
